--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Like the title, which appears on the browser tab but not inside the page
       Further down you'll see the content that displays in the page
     -->
-    <title>Im the best!</title>
+    <title>Creepypasta!</title>
 
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -46,15 +46,19 @@
           <form>
             <input type="submit" />
           </form>
+          <form
+  method="post"
+  action="https://sheetdb.io/api/v1/58f61be4dda40">
+    ID: <input name="data[id]">
+    Name: <input name="data[name]">
+    Age: <input name="data[age]">
+    <button type="submit">Submit</button>
+</form>
           <p>
-            Wanna learn how to be emo <strong>you've come to the right place!</strong> project.
-            You can use it to build your own site. Check out the code in the
-            editor and open the
-            <span class="fileopener" data-file="TODO.md" data-line="0"
-              >TODO</span
-            >
-            for next steps!
+            <strong>Some info about me >_< </strong> 
           </p>
+          <p> I am an OG emo. Ofc you wouldnt want to learn how to be emo from a noobie. With that being said, state some of your info to see if you qualify. For example, "My birthday is 2/20/2008, im in 10th grade and i wanna be emo!""
+          
           <!--  🚧 TODO: ADD BUTTON HERE -->
 
           <!-- Once you've added the button from TODO.md, click it in the page -->
@@ -71,12 +75,11 @@
         href="https://glitch.com/edit/#!/remix/glitch-hello-website"
       >
         <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
+          src="https://www.famousbirthdays.com/faces/scherer-corey-image.jpg"
           alt=""
         />
-        Remix on Glitch
+        
       </a>
     </footer>
   </body>
 </html>
-
